# projeto_damas_haskell

./: README.md
jogo_damas/: jogodamas.cabal
jogo_damas/src/: Jogo.hs  Logica.hs  Main.hs  Renderizacao.hs
jogo_damas/test/: Spec.hs
