name:                jogodamas
version:             0.1.0.0
author:              Gabriel Fernandes
category:            Games
build-type:          Simple
cabal-version:       >=1.10

executable jogodamas
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Jogo
                     , Logica
                     , Renderizacao
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, gloss, array

test-suite jogodamas-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
      src
  other-modules:       Jogo
                     , Logica
  build-depends:
      tasty
    , tasty-hunit
    , gloss
    , array
    , base >=4.7 && <5
  default-language: Haskell2010
